--- a/furry-friend/src/app/login/login.component.css
+++ b/furry-friend/src/app/login/login.component.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px;
+    margin-left: 60px;
 
 }
 form {
