--- a/furry-friend/src/app/match/match.component.css
+++ b/furry-friend/src/app/match/match.component.css
@@ -2,4 +2,17 @@
     color: #e91e63;
     outline-color: #e91e63 ;
 }
+h1{ 
+    text-align: center;
+}
+#matchResults { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+app-card { 
+    display: block;
+  width: 100px;  /* specify a fixed width */
+  height: 100px; 
+}
